DFS/BFS_이테코_Part2

--- a/이테코/DFS_BFS/part2/미로 탈출.ipynb
+++ b/이테코/DFS_BFS/part2/미로 탈출.ipynb
@@ -9,51 +9,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m dx \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     28\u001b[0m dy \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m---> 30\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mbfs\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[0;32mIn[10], line 11\u001b[0m, in \u001b[0;36mbfs\u001b[0;34m(row, col)\u001b[0m\n\u001b[1;32m      9\u001b[0m x \u001b[38;5;241m=\u001b[39m row \u001b[38;5;241m+\u001b[39m dx[i]\n\u001b[1;32m     10\u001b[0m y \u001b[38;5;241m=\u001b[39m col \u001b[38;5;241m+\u001b[39m dy[i]\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[43my\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m \u001b[38;5;129;01mor\u001b[39;00m x \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m n \u001b[38;5;129;01mor\u001b[39;00m y\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m graph[x][y]:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
      ]
     }
    ],
    "source": [
     "def bfs(row, col):\n",
-    "    global n, m, graph, queue, dx, dy\n",
     "    queue.append([row, col])\n",
-    "\n",
     "    while queue:\n",
-    "        row, col = queue.popleft()\n",
-    "        \n",
+    "        # 가장 먼저 들어왔던 위치를 먼저 탐색\n",
+    "        q = queue.popleft()\n",
+    "        # 탐색 종료 조건\n",
+    "        if q[0] == n-1 and q[1] == m-1:\n",
+    "            return graph[n-1][m-1]\n",
+    "        # 근처 4방향으로 탐색\n",
     "        for i in range(4):\n",
-    "            x = row + dx[i]\n",
-    "            y = col + dy[i]\n",
-    "            if x < 0 or y < 0 or x >= n or y>= m:\n",
-    "                continue\n",
-    "            if graph[x][y]:\n",
-    "                graph[x][y] = graph[row][col] + 1\n",
-    "                queue.append([x, y])\n",
-    "            else:\n",
-    "                continue\n",
-    "    print(graph)\n",
-    "    return graph[n-1][m-1]\n",
+    "            x = q[0] + dx[i]\n",
+    "            y = q[1] + dy[i]\n",
+    "            # 판 안에 들어갈 때만 탐색\n",
+    "            if 0 <= x < n and 0 <= y < m:\n",
+    "                if graph[x][y]:\n",
+    "                    # 가장 근처에 있는 길을 queue에 저장\n",
+    "                    queue.append([x, y])\n",
+    "                    # 방문 표시 = 출발지부터 이동한 거리\n",
+    "                    graph[x][y] = graph[q[0]][q[1]] + 1\n",
+    "\n",
     "\n",
     "from collections import deque\n",
     "\n",
     "n, m = map(int, input().split())\n",
     "graph = [list(map(int, input())) for _ in range(n)]\n",
     "queue = deque()\n",
-    "# 우, 아래, 위, 좌\n",
-    "dx = [0, 1, -1, 0]\n",
-    "dy = [1, 0, 0, -1]\n",
+    "# 상, 하, 좌, 우\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
     "\n",
     "print(bfs(0, 0))"
    ]
