--- a/4. 정렬/이테코/note/sort3_퀵정렬.ipynb
+++ b/4. 정렬/이테코/note/sort3_퀵정렬.ipynb
@@ -28,7 +28,7 @@
     "- 왼쪽, 오른쪽 각 array의 첫 번째 원소 = pivot\n",
     "- 각 array의 len(array) = 1 일 때 정렬을 멈춤\n",
     "- pivot보다 오른쪽 값이 모두 클 때 정렬을 멈추고 오른쪽 array의 첫 번째 원소를 pivot으로 설정\n",
-    "- pivot보다 왼쪽 값이 모두 작을 때 정렬을 멈추고 왼쪽 array의 첫 번째 원소를 pivot으로 설정\n",
+    "- pivot보다 오른쪽 값이 모두 작을 때 array의 가장 큰 값과 pivot을 교환하고 교환한 원소를 pivot으로 설정\n",
     "\n",
     "-> `제귀함수`로 표현"
    ]
