Fix: 사용라지 않는 문법 ; 제거

--- a/0. 자료구조 및 수학/수학/4375번 1.ipynb
+++ b/0. 자료구조 및 수학/수학/4375번 1.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "while 1:\n",
     "  try:\n",
-    "    n = int(sys.stdin.readline());\n",
+    "    n = int(sys.stdin.readline())\n",
     "  except:\n",
     "    break\n",
     "  \n",
