--- a/0. 자료구조 및 수학/수학/4_17427 약수의 합 2 copy.ipynb
+++ b/0. 자료구조 및 수학/수학/4_17427 약수의 합 2 copy.ipynb
@@ -75,11 +75,11 @@
    "source": [
     "import sys\n",
     "\n",
-    "n = int(sys.stdin.readline())\n",
+    "N = int(sys.stdin.readline())\n",
     "result = 0\n",
     "\n",
-    "for i in range(1, n+1):\n",
-    "  result += (n//i)*i\n",
+    "for n in range(1, N+1):\n",
+    "  result += (N//n)*n\n",
     "\n",
     "print(result)"
    ]
