--- a/tips/tips3_메서드 활용 모음.ipynb
+++ b/tips/tips3_메서드 활용 모음.ipynb
@@ -93,6 +93,103 @@
     "\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n",
+      "1\n",
+      "4\n",
+      "dict\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "dict.values\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "dict.items\n",
+      "b 2\n",
+      "c 3\n",
+      "d 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary\n",
+    "\n",
+    "sH = dict()\n",
+    "print(sH)\n",
+    "\n",
+    "sH = {'a':1, 'b':2, 'c':3, 'd':4}\n",
+    "print(sH)\n",
+    "print(sH['a'])\n",
+    "print(len(sH))\n",
+    "\n",
+    "del sH['a']\n",
+    "\n",
+    "print(\"dict\")\n",
+    "for key in sH:\n",
+    "  print(key)\n",
+    "\n",
+    "print(\"dict.values\")\n",
+    "for value in sH.values():\n",
+    "  print(value)\n",
+    "\n",
+    "print(\"dict.items\")\n",
+    "for key, value in sH.items():\n",
+    "  print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {})\n",
+      "defaultdict(<class 'int'>, {0: 0, 1: 1, 2: 2})\n",
+      "Counter({3: 3, 2: 2, 7: 1, 110: 1})\n",
+      "2\n",
+      "3\n",
+      "Counter({'a': 4, 'b': 2, 'c': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# defaultdict : 주어진 값의 빈도수 확인 시 사용 (dictinary)\n",
+    "# Counter : 주어진 값의 빈도수 확인 시 사용 (dictinary)\n",
+    "\n",
+    "from collections import defaultdict, Counter\n",
+    "\n",
+    "sH = defaultdict(int)\n",
+    "print(sH)\n",
+    "\n",
+    "for i in range(3):\n",
+    "  sH[i] = i\n",
+    "\n",
+    "print(sH)\n",
+    "\n",
+    "cH = Counter([2, 2, 3, 3, 3, 7, 110])\n",
+    "print(cH)\n",
+    "\n",
+    "for i in cH:\n",
+    "  if cH[i] == i:\n",
+    "    print(i)\n",
+    "\n",
+    "tH = Counter('aabcaab') \n",
+    "print(tH)"
+   ]
   }
  ],
  "metadata": {
