--- a/tips/tip4_라이브러리 활용 모음.ipynb
+++ b/tips/tip4_라이브러리 활용 모음.ipynb
@@ -78,6 +78,35 @@
     "tH = Counter('aabcaab') \n",
     "print(tH)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (1, 3), (1, 4), (2, 1), (2, 3), (2, 4), (3, 1), (3, 2), (3, 4), (4, 1), (4, 2), (4, 3)]\n",
+      "[(1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# permutations: 순열\n",
+    "# combinations: 조합 \n",
+    "\n",
+    "from itertools import permutations, combinations\n",
+    "\n",
+    "a = [1,2,3,4]\n",
+    "per = permutations(a, 2)\n",
+    "print(list(per))\n",
+    "\n",
+    "b = [1,2,3,4]\n",
+    "com = combinations(b, 2)\n",
+    "print(list(com))"
+   ]
   }
  ],
  "metadata": {
