doc: python list 곱 라이브러리

--- a/tips/tip4_라이브러리 활용 모음.ipynb
+++ b/tips/tip4_라이브러리 활용 모음.ipynb
@@ -95,7 +95,7 @@
    ],
    "source": [
     "# permutations: 순열\n",
-    "# combinations: 조합 \n",
+    "# combinations: 조합\n",
     "\n",
     "from itertools import permutations, combinations\n",
     "\n",
@@ -106,6 +106,27 @@
     "b = [1,2,3,4]\n",
     "com = combinations(b, 2)\n",
     "print(list(com))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list 곱\n",
+    "\n",
+    "from math import prod\n",
+    "\n",
+    "prod([1, 2, 3])"
    ]
   }
  ],
