doc: python list 정렬

--- a/tips/tip3_메서드 활용 모음.ipynb
+++ b/tips/tip3_메서드 활용 모음.ipynb
@@ -111,6 +111,88 @@
     "for key, value in sH.items():\n",
     "  print(key, value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 방향 이동 및 회전\n",
+    "\n",
+    "# 상, 우, 하, 좌\n",
+    "dx = [-1, 0, 1, 0]\n",
+    "dy = [0, 1, 0, -1]\n",
+    "\n",
+    "# 우를 보고 있음\n",
+    "d = 1\n",
+    "\n",
+    "# 오른쪽으로 90도 회전 = 왼쪽으로 9=270도 회전\n",
+    "d = (d+1) % 4\n",
+    "print(d)\n",
+    "\n",
+    "# 오른쪽으로 180도 회전 = 왼쪽으로 180도 회전\n",
+    "d = (d+2) % 4\n",
+    "print(d)\n",
+    "\n",
+    "# 오른쪽으로 270도 회전 = 왼쪽으로 90도 회전\n",
+    "d = (d+3) % 4\n",
+    "print(d)\n",
+    "\n",
+    "# 상, 우상, 우, 우하, 하, 좌하, 좌, 좌상\n",
+    "dx = [-1, -1, 0, 1, 1, 1, 0, -1]\n",
+    "dy = [0, 1, 1, 1, 0, -1, -1, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[3, 2, 1]\n",
+      "[1, 2, 3]\n",
+      "[3, 2, 1]\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list 정렬\n",
+    "\n",
+    "l = [1, 2, 3]\n",
+    "\n",
+    "l.sort()\n",
+    "print(l)\n",
+    "\n",
+    "l.sort(reverse = True)\n",
+    "print(l)\n",
+    "\n",
+    "a = sorted(l)\n",
+    "print(a)\n",
+    "\n",
+    "a = a[::-1]\n",
+    "print(a)\n",
+    "\n",
+    "print(a[0] == l[0])\n",
+    "a[0] = 4\n",
+    "print(a[0] == l[0])"
+   ]
   }
  ],
  "metadata": {
