--- a/tips/tip3_메서드 활용 모음.ipynb
+++ b/tips/tip3_메서드 활용 모음.ipynb
@@ -156,26 +156,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n",
-      "[3, 2, 1]\n",
-      "[1, 2, 3]\n",
-      "[3, 2, 1]\n",
-      "True\n",
-      "False\n"
+      "[[1, 2], [2, 4], [3, 3]]\n",
+      "[[3, 3], [2, 4], [1, 2]]\n",
+      "[[2, 4], [3, 3], [1, 2]]\n",
+      "[[1, 2], [2, 4], [3, 3]]\n",
+      "[[3, 3], [2, 4], [1, 2]]\n"
      ]
     }
    ],
    "source": [
     "# list 정렬\n",
     "\n",
-    "l = [1, 2, 3]\n",
+    "l = [[1, 2], [2, 4], [3, 3]]\n",
     "\n",
     "l.sort()\n",
     "print(l)\n",
@@ -183,15 +182,14 @@
     "l.sort(reverse = True)\n",
     "print(l)\n",
     "\n",
-    "a = sorted(l)\n",
+    "l.sort(reverse = True, key = lambda x: x[1])\n",
+    "print(l)\n",
+    "\n",
+    "a = sorted(l) # 새로운 배열\n",
     "print(a)\n",
     "\n",
     "a = a[::-1]\n",
-    "print(a)\n",
-    "\n",
-    "print(a[0] == l[0])\n",
-    "a[0] = 4\n",
-    "print(a[0] == l[0])"
+    "print(a)"
    ]
   }
  ],
