doc: list 정렬 (lambda)

--- a/tips/tip3_메서드 활용 모음.ipynb
+++ b/tips/tip3_메서드 활용 모음.ipynb
@@ -156,40 +156,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 2], [2, 4], [3, 3]]\n",
-      "[[3, 3], [2, 4], [1, 2]]\n",
-      "[[2, 4], [3, 3], [1, 2]]\n",
-      "[[1, 2], [2, 4], [3, 3]]\n",
-      "[[3, 3], [2, 4], [1, 2]]\n"
+      "[[1, 2], [2, 4], [3, 2]]\n",
+      "reverse [[3, 2], [2, 4], [1, 2]]\n",
+      "key = lambda [[2, 4], [3, 2], [1, 2]]\n",
+      "key = lambda 출력 두 개 [[1, 2], [3, 2], [2, 4]]\n",
+      "x[1] 기준으로 오름차순, x[1]값이 동일하면 x[0]의 기준으로 오름차순\n",
+      "[[1, 2], [2, 4], [3, 2]]\n",
+      "[[3, 2], [2, 4], [1, 2]]\n",
+      "['a', 'd', 'f', 's']\n",
+      "adfs\n"
      ]
     }
    ],
    "source": [
     "# list 정렬\n",
     "\n",
-    "l = [[1, 2], [2, 4], [3, 3]]\n",
+    "l = [[1, 2], [2, 4], [3, 2]]\n",
     "\n",
     "l.sort()\n",
     "print(l)\n",
     "\n",
     "l.sort(reverse = True)\n",
-    "print(l)\n",
+    "print(\"reverse\", l)\n",
     "\n",
     "l.sort(reverse = True, key = lambda x: x[1])\n",
-    "print(l)\n",
+    "# = l.sort(key = lambda x: -x[1])\n",
+    "print(\"key = lambda\", l)\n",
+    "\n",
+    "l.sort(key = lambda x: (x[1], x[0]))\n",
+    "print(\"key = lambda 출력 두 개\", l)\n",
+    "print(\"x[1] 기준으로 오름차순, x[1]값이 동일하면 x[0]의 기준으로 오름차순\")\n",
     "\n",
     "a = sorted(l) # 새로운 배열\n",
     "print(a)\n",
     "\n",
     "a = a[::-1]\n",
-    "print(a)"
+    "print(a)\n",
+    "\n",
+    "b = sorted('asdf')\n",
+    "print(b)\n",
+    "print(''.join(b))"
    ]
   }
  ],
