--- a/tips/tip4_라이브러리 활용 모음.ipynb
+++ b/tips/tip4_라이브러리 활용 모음.ipynb
@@ -128,6 +128,34 @@
     "\n",
     "prod([1, 2, 3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# factorial 구현 (재귀, DFS)\n",
+    "\n",
+    "def factorial(n):\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)\n",
+    "\n",
+    "factorial(5)"
+   ]
   }
  ],
  "metadata": {
